[tool.poetry]
name = "app-5-api-email"
version = "0.1.0"
description = ""
authors = ["BARINGA\\Panayiotis.Salatas <panayiotis.salatas@baringa.com>"]
readme = "README.md"
packages = [{include = "app_5_api_email"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
